[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dalle-mini-tools"
version = "0.1.0"
description = "A collection of tools for generating dalle-mini images"
authors = ["Mark Kockerbeck","Matt Mollison"]

[tool.poetry.dependencies]
dalle-mini = "^0.1.1"
fire = "^0.4.0"
Flask = "^2.1.2"
ipywidgets = "^7.7.1"
pySqsListener = "^0.8.10"
python = ">=3.10.5,<3.11"
python-slugify = "^6.1.2"
tokenizers = "~=0.11.6"
vqgan-jax = {git = "https://github.com/patil-suraj/vqgan-jax.git", rev = "main"}

[tool.poetry.dev-dependencies]
black = "~22.3.0"
flake8 = "~4.0.1"
ipdb = "^0.13.9"
isort = "~5.10.1"
mypy = "~0.960"
# pytest = "~7.1.2"

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
